# MeowLLM

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  persona.md  pyproject.toml
.github/workflows/: test.yml
data/: tokenizer.json  train.jsonl  val.jsonl
docs/: dataset_card.md  faq.md  getting_started.md  model_card.md  release.md  troubleshooting.md
meow/: __init__.py  dataset.py  eval_cases.py  generate_data.py  inference.py  model.py  rules.py  tokenizer.py  train.py
notebooks/: chat_with_meow.ipynb  train_meow.ipynb
scripts/: test_rules_smoke.py  train_cpu.py  upload_to_hf.sh
tests/: test_generate_data.py  test_model.py  test_rest.py  test_rules.py
